<resources>
    <string name="app_name">Projeto1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="userName">User name</string>
    <string name="password">Password</string>
    <string name="cadastrar">Save</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="required">Required</string>
    <string name="personalData">Personal Data</string>
    <string name="success">Success</string>
    <string name="edit">Edit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="confirm">Confirmar</string>
    <string name="confirm_progress">\?</string>
    <string name="cep">CEP</string>
    <string name="addressInfo">Address</string>
    <string name="tipoLogradouro">tipoLogradouro</string>
    <string name="logradouro">Logradouro</string>
    <string name="city">City</string>
    <string name="estado">Estado</string>
    <string name="loading">Loading</string>
    <string name="invalid">Invalid</string>
    <string name="noConection">No Connection</string>
    <string name="zipcodeInvalid">Cep informador não encontrado</string>

</resources>
