<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/abc_ratingbar_full_material" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/personalData"
            android:textSize="20dp" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <EditText
            android:id="@+id/txtCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cep"
            android:inputType="number" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/addressInfo"
            android:paddingTop="5dp"
            android:textSize="20dp" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtTipoDeLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipoLogradouro" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logradouro" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estado" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    </LinearLayout>
</ScrollView>